# libsha2

./: .gitignore  Makefile.am  README.md  TODO  configure.ac  libsha2.pc.in
.github/workflows/: ci.yaml
include/sha2/: sha256.h
lib/: Makefile.am  common.c  common.h  sha256.c  sha256_armv8.c  sha256_avx2.c  sha256_internal.h  sha256_shani.c  sha256_sse4.c  sha256_sse41.c
lib/compat/: byteswap.c  byteswap.h  cpuid.h  endian.h
src/: sha256sum.c
test/: .gitignore  Makefile.am  gtest.cc  sha2.cc
wrappers/swift/: SHA2.swift
